# FFmpegInAndroid

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
CommonLibrary/: build.gradle
FFmpegExamples/: CMakeLists.txt  build.gradle
FFmpegLib/: .gitignore  CMakeLists.txt  build.gradle  local.properties
FFmpegLib/gradle/wrapper/: gradle-wrapper.properties
FFmpegLib/src/main/cpp/: ffmpeg-config.cpp  native-lib.cpp
FFmpegLib/src/main/cpp/codec/: decode.cpp  decode.h  decodeUtil.cpp
FFmpegLib/src/main/cpp/codec/decode/: decodeUtil.cpp  decodeUtil.h
FFmpegLib/src/main/cpp/codec/encode/: encode.cpp  encode_audio.cpp  encode_video.cpp
FFmpegLib/src/main/cpp/ffmpeg_examples/: decode_audio.cpp  decode_to_yuv.cpp  decode_video.cpp  encode_audio.cpp  encode_video.cpp
FFmpegLib/src/main/cpp/include/: mediadata.cpp
FFmpegLib/src/main/cpp/include/ffmpeg_examples/: decode_video.cpp
FFmpegLib/src/main/cpp/include/libx264/: x264.h
FFmpegLib/src/main/java/com/glumes/ffmpeglib/: FFMPEGTest.java  FFmpegEvent.java  FFmpegSample.java  FFmpegSampleHolder.java  SimpleDecoder.java
FFmpegLib/src/main/java/com/glumes/ffmpeglib/codec/: DecodeUtils.java  EncodeUtils.java  VideoDecoder.kt  VideoEncoder.kt
FFmpegLib/src/main/java/com/glumes/ffmpeglib/utils/: Constants.java  LogUtil.java
FFmpegLib/src/test/java/com/glumes/ffmpeglib/: ExampleUnitTest.java
FileStorage/: mpeg_file.mpeg
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/glumes/ffmpeginandroid/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/glumes/ffmpeglearn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/files/: ds_480x272.h264
app/src/main/base/com/glumes/base/: BaseActivity.kt  BaseListActivity.java  BinderType.kt
app/src/main/base/com/glumes/base/binder/: BackOperationBinder.kt  BasicItemBinder.kt  GroupItemBinder.kt  JumpActivityBinder.kt
app/src/main/codec/com/glumes/codec/: DecodeActivity.kt  DecodeWrapper.kt  EncodeActivity.kt  EncodeWrapper.kt
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/glumes/ffmpeginandroid/: Artist.java  FFmpegActivity.kt  FFmpegAdapter.java  FFmpegAdapter.kt  FFmpegApplication.java  FFmpegFactory.kt  FFmpegOps.kt  FFmpegOpsViewHolder.kt  FFmpegType.kt  FFmpegTypeViewHolder.kt  Genre.kt  GenreAdapter.java  GenreDataFactory.java  MainActivity.java  ShowPGMActivity.kt
app/src/main/java/com/glumes/ffmpeginandroid/adapter/: FFmpegAdapter.java  FFmpegOps.kt  FFmpegOpsViewHolder.kt  FFmpegType.kt  FFmpegTypeViewHolder.kt
app/src/main/java/com/glumes/ffmpeginandroid/ffmpeg/: FFmpegBridge.kt  FFmpegFactory.kt
app/src/main/java/com/glumes/ffmpeginandroid/listener/: OnFFmpegOpsListener.kt
app/src/main/java/com/glumes/ffmpeginandroid/util/: Log.kt
app/src/main/java/com/glumes/ffmpeglearn/: MainActivity.java  MyApplication.java
app/src/main/java/com/glumes/ffmpeglearn/fileaddress/: FileContants.java
app/src/main/res/layout/: activity_decode.xml  activity_encode.xml  activity_ffmpeg.xml  activity_home.xml  activity_main.xml  activity_show_pgm.xml  activity_view_model.xml  adapter_background_operation.xml  adapter_basic_type.xml  adapter_jump_activity.xml  audio_encode_decode.xml  ffmpeg_config.xml  item_ffmpeg_ops.xml  item_ffmpeg_type.xml  video_encode_decode.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/main/util/com/glumes/util/: FFmpegType.kt  FileConstants.java  FileContants.java  Log.kt  OpsType.kt  PGM.java
app/src/test/java/com/glumes/ffmpeginandroid/: ExampleUnitTest.java
app/src/test/java/com/glumes/ffmpeglearn/: ExampleUnitTest.java
ffmpeg_data/: build_ffmepg_arm.sh  build_ffmpeg_with_x264_arm.sh  config.asm  config.h  configure  ffmpeg_h264_info.txt
ffmpeg_data/libavcodec/: ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  alacenc.d  asvenc.d  dcaadpcm.d  dcaenc.d  dnxhdenc.d  dvenc.d  eac3enc.d  exr.d  ffv1enc.d  flacenc.d  flashsv2enc.d  flashsvenc.d  h261enc.d  huffyuvenc.d  huffyuvencdsp.d  jpeglsenc.d  lclenc.d  libavcodec.pc  libavcodec.version  libx264.d  ljpegenc.d  mjpegenc.d  mjpegenc_common.d  mpeg12enc.d  mpegaudioenc_fixed.d  mpegaudioenc_float.d  mscc.d  msmpeg4enc.d  opusenc.d  ra144enc.d  rle.d  roqaudioenc.d  roqvideoenc.d  rv10enc.d  rv20enc.d  s302menc.d  snowenc.d  (+7 more)
ffmpeglib/: .gitignore  CMakeLists.txt  README.md  build.gradle
ffmpeglib/src/androidTest/java/com/glumes/ffmpeglib/: ExampleInstrumentedTest.java
ffmpeglib/src/ffmpeg_examples/: decode_audio.cpp
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: native-lib.cpp
ffmpeglib/src/main/cpp/basic/: FFmpegBasic.cpp  FFmpegBasic.h  ffmpeg_basic_operations.cpp  ffmpeg_basic_operations.h
ffmpeglib/src/main/cpp/codec/: FFmpegCodec.cpp  FFmpegCodec.h  ffmpeg_codec_operation.cpp  ffmpeg_codec_operation.h
ffmpeglib/src/main/cpp/codec/decode/: decode.cpp
ffmpeglib/src/main/cpp/codec/encode/: encode_video.cpp
ffmpeglib/src/main/cpp/common/: LogClient.cpp  LogClient.h  logutil.h
ffmpeglib/src/main/cpp/include/: mediadata.cpp
ffmpeglib/src/main/cpp/include/ffmpeg_examples/: decode_audio.cpp
ffmpeglib/src/main/cpp/include/libavfilter/: avfilter.h
ffmpeglib/src/main/cpp/include/libavutil/: ffversion.h
ffmpeglib/src/main/cpp/include/libsimple_mediadata/: simple_mediadata.cpp  simple_mediadata.h
ffmpeglib/src/main/cpp/muxer/: FFmpegMuxer.cpp  FFmpegMuxer.h  ffmpeg_muxer_operation.cpp  ffmpeg_muxer_operation.h
ffmpeglib/src/main/java/com/glumes/ffmpeglib/: CodecEngine.kt  FFMPEGTest.java  FFmpegSample.java  FFmpegWork.java  Operations.kt  Player.java  SimpleDecoder.java
ffmpeglib/src/main/java/com/glumes/ffmpeglib/basic/: FFmpegBasicOperation.java
ffmpeglib/src/main/java/com/glumes/ffmpeglib/codec/: DecodeUtils.java  FFmpegCodecOperation.java
ffmpeglib/src/main/java/com/glumes/ffmpeglib/muxer/: FFmpegMuxerOperation.java
ffmpeglib/src/main/java/com/glumes/ffmpeglib/view/: VideoView.java
ffmpeglib/src/main/res/values/: style.xml
gradles/: config.gradle  environment.gradle  util.gradle
widget/: build.gradle
(+65 files in other folders)
